<resources>
    <string name="app_name">Recipe Application</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="splash_screen_activity">Welcome</string>
    <string name="available_recipes">Recipies</string>
    <string name="food_categories">Food Categories</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="title_activity_recipe_category">Food Category</string>
    <string name="recipe_label">Recipe Label</string>
    <string name="source">Source</string>
    <string name="source_icon">Source Icon</string>
    <string name="diet_labels">Diet Labels</string>
    <string name="health_labels">Health Labels</string>
    <string name="ingredients">Ingredients</string>
    <string name="recipe_uri">Recipe Uri</string>
    <string name="recipe_url">Recipe Url</string>
    <string name="title_activity_image_category">ImageCategoryActivity</string>
    <string name="source_info_label">Source: </string>
    <string name="home_page_title">What\'s For Dinner?</string>
    <string name="choose_food_type">Choose Food Type</string>
    <string name="my_favourite_recipes">My Favourite Recipes</string>
    <string name="healthLabelsLbl">Health Labels</string>
    <string name="dietLabelsLbl">Diet labels</string>
    <string name="ingredientsLbl">Ingredients</string>
    <string name="show_recipe_details">Show Recipe Details</string>
    <string name="show_recipe_source">Show Source Details</string>
    <string name="my_favourites">My Favourites</string>
</resources>
