<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_frame_layout">

            <ImageView
                android:id="@+id/ivRecipeImage"
                android:layout_width="120dp"
                android:layout_height="160dp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvRecipeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="5dp"
                android:textColor="@color/textColor"
                 />
            <!--style="@style/myCustomStyle"-->

            <TextView
                android:id="@+id/tvRecipeUri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_uri"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sourceInfoArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/sourceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/source_info_label"
                android:id="@+id/textView" />

            <TextView
                android:id="@+id/tvRecipeSource"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_marginLeft="5dp" />

            <LinearLayout
                android:id="@+id/sourceLinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:visibility="gone"
                    android:id="@+id/ivRecipeSourceIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/source_icon"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:padding="5dp" />

                    <LinearLayout
                        android:id="@+id/sourceTest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <!--<TextView-->
                            <!--android:id="@+id/tvRecipeSource"-->
                            <!--android:layout_width="wrap_content"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:text="@string/source"-->
                            <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->

                        <TextView
                            android:visibility="gone"
                            android:id="@+id/tvRecipeUrl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/recipe_url"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                             /> <!--android:autoLink="web"-->

                    </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--&lt;!&ndash;TODO - Add Rating Bar back in on Recipe Details Activity/Fragment&ndash;&gt;-->
        <!--&lt;!&ndash;<RatingBar&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_gravity="center"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:id="@+id/rbRecipeRating"&ndash;&gt;-->
            <!--&lt;!&ndash;android:stepSize=".5"&ndash;&gt;-->
            <!--&lt;!&ndash;style="?android:attr/ratingBarStyleIndicator"&ndash;&gt;-->
            <!--&lt;!&ndash;android:isIndicator="false"&ndash;&gt;-->
            <!--&lt;!&ndash;android:focusable="false"&ndash;&gt;-->
            <!--&lt;!&ndash;android:focusableInTouchMode="false" />&ndash;&gt;-->

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ingredientsLbl"
            android:id="@+id/textIngredientsLbl" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/ingredients"
            android:id="@+id/tvRecipeIngredients" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dietLabelsLbl"
            android:id="@+id/textDietLabelsLbl" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/diet_labels"
            android:id="@+id/tvRecipeDietLabels" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/healthLabelsLbl"
            android:id="@+id/textHealthLabelsLbl" />

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/health_labels"
            android:id="@+id/tvRecipeHealthLabels" />

    </LinearLayout>

</LinearLayout>