<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_frame_layout">

            <ImageView
                android:id="@+id/ivRecipeImage"
                android:layout_width="120dp"
                android:layout_height="160dp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_gravity="center" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvRecipeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/tvRecipeUri"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_uri"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/main_frame_layout"
                android:layout_marginTop="10dp" >
                <ImageView
                    android:id="@+id/ivRecipeSourceIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:text="@string/source_icon"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:padding="5dp" />

                <TextView
                    android:id="@+id/tvRecipeSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/source"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_gravity="center_horizontal|top" />

                <TextView
                    android:id="@+id/tvRecipeUrl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/recipe_url"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_gravity="center"
                    android:autoLink="web" />

            </FrameLayout>

            <!--<TextView-->
                <!--android:id="@+id/tvRecipeDietLabel"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/diet_labels"-->
                <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RatingBar
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbRecipeRating"
            android:stepSize=".5" />

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="@string/ingredients"-->
            <!--android:id="@+id/tvRecipeIngredients" />-->

    </LinearLayout>

</LinearLayout>







